[package]
name = "delorean"
version = "0.3.0"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "A simple single thread reactor pattern for wasm"
documentation = "https://docs.rs/delorean"
edition = "2021"
include = ["src/**/*", "Cargo.toml"]
keywords = ["reactor", "WASM", "SPA"]
license = "MIT/Apache-2.0"
repository = "https://github.com/delorean-rs/delorean"

[badges]
travis-ci = { repository = "delorean-rs/delorean", branch = "master" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
wasm-bindgen-futures = "0.4"
async-timer = "0.7"
wasm-bindgen-test = "0.3"

[build-dependencies]
yarte_helpers = { version = "~0.15.8", default-features = false, features = ["config"] }
