[package]
name = "crossterm"
version = "0.1.0"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
delorean = "0.2"
crossterm = { version = "0.17", features = ["event-stream"] }

futures = "0.3"
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "macros", "time"]}
