[package]
name = "winit"
version = "0.1.0"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
delorean = "0.2"
winit = "0.23"

futures = "0.3"
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "macros", "time"]}
parking_lot = "0.11.0"
